--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="https://i.ibb.co/xJnJYBP/2-1.png" href="https://i.ibb.co/xJnJYBP/2-1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Living Space Solution</title>
 </head>
